@@ -1,3 +1,7 @@
+2014-06-27  Carl Hetherington  <cth@carlh.net>
+
+	* Fix up/down buttons in content list.
+
 2014-06-26  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.70.0 released.
